--- a/config/pose_editing_adam.yml
+++ b/config/pose_editing_adam.yml
@@ -1,5 +1,7 @@
 task: pose_editing
+experiment: pose_editing
 text_prompt: a person is jumping
+seed: 20
 dno:
   optimizer: Adam
   num_opt_steps: 800
